--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -17,18 +17,20 @@
         <a href="{% url 'booking_dj' %}" class="cat-dj">
             DJs
         </a>
-        <a href="{% url 'booking_date' %}" class="cat-oth">
-            Lights
-        </a>
-        <a href="" class="cat-oth">
-            Sound Systems
-        </a>
-        <a href="" class="cat-oth">
-            Decorations
-        </a>
-        <a href="" class="cat-oth">
-            Catering
-        </a>
+        <div class="sub-catagory">
+            <a href="{% url 'booking_date' %}" class="cat-oth">
+                Lights
+            </a>
+            <a href="" class="cat-oth">
+                Sound Systems
+            </a>
+            <a href="" class="cat-oth">
+                Decorations
+            </a>
+            <a href="" class="cat-oth">
+                Catering
+            </a>
+        </div>
     </div>
     <div class="desc">
         Book top-tier DJs, state-of-the-art lighting, and premium sound systems for your next event. Whether it's a wedding, corporate function, or private party, our expert team will create an unforgettable experience tailored to your needs. Elevate your celebration with the best in entertainment and ambiance.
