--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -113,6 +113,12 @@ a{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
+    .sub-catagory{
+        width: 100vh;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
     .cat-dj{
         margin-top: 20px;
         width: 90%;
@@ -148,16 +154,16 @@ a{
         transition: all 0.3s;
         padding-bottom: 15px;
     }
-    .cat-oth:nth-child(2){
+    .cat-oth:nth-child(1){
         background-image: url("https://shaadiwish.com/blog/wp-content/uploads/2022/08/accent-fairy-lights-decor-17.jpg");
     }
-    .cat-oth:nth-child(3){
+    .cat-oth:nth-child(2){
         background-image: url("https://t3.ftcdn.net/jpg/06/60/12/92/360_F_660129269_rqFR78uAZ8MCUuLbvo9WLoJvsyUXkG8f.jpg");
     }
-    .cat-oth:nth-child(4){
+    .cat-oth:nth-child(3){
         background-image: url("https://5.imimg.com/data5/ANDROID/Default/2021/5/IP/IA/BO/13372070/product-jpeg.jpg");
     }
-    .cat-oth:nth-child(5){
+    .cat-oth:nth-child(4){
         background-image: url("https://5.imimg.com/data5/YK/LH/MY-49574912/platinum-package-500x500.jpg");
     }
     .cat-dj:hover, .cat-oth:hover{
@@ -245,14 +251,20 @@ a{
         }
     }
     .catagory{
+        .sub-catagory{
+            width: 50vh;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-evenly;
+            margin-top: 70px;
+        }
         .cat-dj{
-            width: 28%;
-            margin-top: 120px;
+            width: 48%;
+            margin-top: 70px;
         }
         .cat-oth{
-            width: 14%;
-            aspect-ratio: 1;
-            margin-top: 120px;
+            width: 44%;
+            aspect-ratio: 1.1;
         }
     }
     .desc{
