--- a/app/templates/booking_dj.html
+++ b/app/templates/booking_dj.html
@@ -28,7 +28,7 @@
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvXNsw-n5lLryWl8VnyPFe2dLIsFE5yOvlMBkfSEapKZGnr84TSpfuxyLlCB8efmg78U8&usqp=CAU" alt="">
             <div class="details">
                 <h1>Vehicle name</h1>
-                <p>description<br>description description<br> description <br>description<br> description description</p>
+                <p>description<br>description description<br> description description</p>
                 <h2>32,000</h2>
                 <button>Book Now</button>
             </div>
@@ -37,7 +37,7 @@
             <img src="https://content.jdmagicbox.com/comp/balasore/g2/9999p6782.6782.180913100904.k4g2/catalogue/star-dj-balasore-disc-jockey-itcy1hbu6a-250.jpg" alt="">
             <div class="details">
                 <h1>Vehicle name</h1>
-                <p>description<br>description description<br> description <br>description<br> description description</p>
+                <p>description<br>description description<br> description description</p>
                 <h2>45,000</h2>
                 <button>Book Now</button>
             </div>
