--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -4,9 +4,49 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+header {
+    background-color: rgba(0, 0, 0, 0.438);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 4;
+
+    img {
+        width: 140px;
+        margin: 0 0 0 0;
+        filter: drop-shadow(2px 2px 10px black);
+        transition: all 0.5s;
+    }
+    
+    a {
+        color: white;
+        margin-left: 10px;
+        font-size: 12px;
+        background-color: purple;
+        padding: 5px 15px;
+        border-radius: 20px;
+        transition: all 0.2s;
+    }
+
+    div:nth-child(2) {
+        margin-top: 8px;
+    }
+
+    a:hover {
+        background-color: white;
+        color: purple;
+    }
+}
+
 h1 {
     text-align: center;
-    margin: 20px 0 0;
+    margin: 40px 0 0;
 }
 
 .dates {
@@ -28,24 +68,26 @@ h1 {
 }
 
 .date {
-    height: 85px;
-    width: 60px;
-    padding: 0 6px;
+    height: 65px;
+    /* width: 50px; */
+    padding: 0 12px;
     border: 2px solid rgb(255, 255, 255);
     border-radius: 10px;
-    margin: auto 15px;
+    margin: auto 12px;
     text-align: center;
     cursor: pointer;
     flex-shrink: 0; /* Prevent dates from shrinking */
 }
 
 .date h4 {
-    margin: 10px auto 6px;
+    margin: 6px auto 3px;
+    font-size: small;
     color: gray;
 }
 
 .date h2 {
     margin: 0;
+    font-size: larger;
 }
 
 .avalability {
@@ -202,6 +244,25 @@ a{
 
 
 @media only screen and (min-width: 720px) {
+    header {
+        img {
+            width: 180px;
+        }
+
+        div:nth-child(2){
+            margin-top: 13px;
+        }
+    
+        a {
+            color: white;
+            margin-left: 20px;
+            font-size: 16px;
+            background-color: purple;
+            padding: 6px 20px;
+            border-radius: 20px;
+            transition: all 0.2s;
+        }
+    }
     .djs{
         display: flex;
         flex-wrap: wrap;
@@ -268,7 +329,7 @@ a{
         }
     }
     .desc{
-        margin: 130px 300px 0;
-        font-size: 17px;
+        margin: 80px 300px 0;
+        font-size: 15px;
     }
   }
