--- a/app/static/css/bookingOthers.css
+++ b/app/static/css/bookingOthers.css
@@ -3,11 +3,54 @@ body {
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
 }
+header {
+    background-color: rgba(0, 0, 0, 0.438);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 4;
+
+    img {
+        width: 180px;
+        margin: 0 0 0 0;
+        filter: drop-shadow(2px 2px 10px black);
+        transition: all 0.5s;
+    }
+    div:nth-child(2){
+        margin-top: 13px;
+    }
+
+    a {
+        color: white;
+        margin-left: 20px;
+        font-size: 16px;
+        background-color: purple;
+        padding: 6px 20px;
+        border-radius: 20px;
+        transition: all 0.2s;
+    }
+
+    a:hover {
+        background-color: white;
+        color: purple;
+    }
+}
+
+a{
+    text-decoration: none;
+}
 
 .date-container {
     display: flex;
     height: 80vh;
     justify-content: space-evenly;
+    margin-top: 60px;
     align-items: center;
 
     p {
@@ -37,6 +80,9 @@ body {
     font-weight: bold;
     transition: all 0.3s;
     text-decoration: none;
+}
+.btn2{
+    display: none;
 }
 
 .btn:hover {
@@ -215,8 +261,8 @@ body {
     button {
         border: none;
         border-radius: 20px;
-        padding: 7px 15px;
-        font-size: 17px;
+        padding: 7px 12px;
+        font-size: 15px;
         font-weight: bold;
         margin: 10px 5px 0;
         background-color: rgba(255, 255, 255, 0.292);
@@ -330,6 +376,25 @@ body {
 
 
     @media only screen and (max-width: 720px) {
+        header {
+            img {
+                width: 140px;
+            }
+    
+            a {
+                color: white;
+                margin-left: 10px;
+                font-size: 12px;
+                background-color: purple;
+                padding: 5px 15px;
+                border-radius: 20px;
+                transition: all 0.2s;
+            }
+        
+            div:nth-child(2) {
+                margin-top: 8px;
+            }
+        }
         .date-container {
             .caption {
                 display: none;
@@ -365,7 +430,22 @@ body {
         }
 
         .btn {
+            display: none;
+        }
+        .btn2{
             margin: 0 0 10px 0;
+            padding: 10px;
+            font-size: 18px;
+            border: none;
+            border-radius: 10px 0px 10px 0px;
+            background-color: rgb(195, 0, 0);
+            color: white;
+            font-weight: bold;
+            transition: all 0.3s;
+            text-decoration: none;
+        }
+        .btn2:hover {
+            transform: scale(0.9);
         }
 
         .djs {
