--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -2,118 +2,151 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
+    position: relative;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-.loading{
+.loading {
     position: fixed;
     width: 100vw;
     height: 100vh;
     background-color: black;
-    z-index: 2;
+    z-index: 5;
     display: flex;
     /* display: none; */
     justify-content: center;
     align-items: center;
-    color: rgb(255, 196, 0);
+    color: #ffffff;
     text-align: center;
-    h1{
-        color: rgb(255, 196, 0);
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin: -5px 0;
-        font-size: 100px;
+
+    img {
+        width: 40vw;
         animation: bounce 2.5s infinite;
     }
-    h5{
-        color: rgb(255, 196, 0);
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+    h5 {
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         margin: 8px 0;
         text-align: center;
-        font-size: 43px;
+        font-size: 40px;
         animation: slideIn 2.5s ease-in-out forwards;
-        span{
+
+        /* span {
             color: red;
             margin: auto 2px;
             font-size: 30px;
             animation: pulse 3.3s 1;
-        }
-        
+        } */
+
     }
 }
 
 @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
+
     40% {
         transform: translateY(-30px);
     }
+
     60% {
         transform: translateY(-15px);
     }
 }
 
 @keyframes slideIn {
-    0%, 60% {
+
+    0%,
+    60% {
         opacity: 0;
         transform: scale(1.5);
     }
+
     100% {
         opacity: 1;
         transform: scale(1);
     }
 }
 
-@keyframes pulse {
+/* @keyframes pulse {
     from {
         opacity: 0;
         font-size: 2px;
     }
+
     90% {
         opacity: 0;
         font-size: 2px;
     }
+
     to {
         opacity: 1;
     }
-}
+} */
 
-header{
+header {
+    /* background-color: rgba(0, 0, 0, 0.438);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px); */
     position: fixed;
-    top: 30px;
-    right: 30px;
-    left: 30px;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    padding: 10px;
     display: flex;
     justify-content: space-between;
-    h1{
+    z-index: 4;
+    /* h1{
         color: rgb(255, 196, 0);
         font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
         margin: -5px 0;
+    } */
+
+    img {
+        width: 320px;
+        margin: 30px 0 0 30px;
+        filter: drop-shadow(2px 2px 10px black);
+        transition: all 0.5s;
     }
-    h5{
-        color: rgb(255, 196, 0);
-        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-        margin: 8px 0;
+
+    h5 {
+        color: rgb(255, 255, 255);
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        margin: 0px 0;
         text-align: center;
-        span{
+        font-size: 8px;
+
+        span {
             color: red;
             margin: auto 2px;
-            font-size: 10px;
+            font-size: 12px;
         }
-        
+
     }
-    a{
+
+    div:nth-child(2){
+        margin-top: 13px;
+    }
+
+    a {
         color: white;
         margin-left: 20px;
-        font-size: 20px;
+        font-size: 16px;
         background-color: purple;
         padding: 6px 20px;
         border-radius: 20px;
         transition: all 0.2s;
     }
+
     a:hover {
         background-color: white;
         color: purple;
@@ -128,7 +161,8 @@ a {
     display: flex;
     justify-content: center;
 }
-.cntr2{
+
+.cntr2 {
     display: flex;
 }
 
@@ -147,13 +181,13 @@ a {
 
     h1 {
         color: rgb(255, 196, 0);
-        font-size: 60px;
+        font-size: 50px;
         /* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
         margin: 0px 20px;
     }
 
     h2 {
-        font-size: 2.8rem;
+        font-size: 3vw;
         margin: 5px;
     }
 
@@ -162,22 +196,24 @@ a {
         margin: 30px auto;
     }
 
-    .avalabilities{
+    .avalabilities {
         text-align: right;
-        h3{
+
+        h3 {
             background-color: rgba(255, 255, 255, 0.263);
             color: rgb(255, 255, 255);
             border-radius: 10px;
             padding: 20px;
             margin: 15px;
+            font-size: 14px;
         }
     }
 }
 
 .book {
     background-color: rgb(255, 196, 0);
-    width: 150px;
-    padding: 10px;
+    width: 130px;
+    padding: 8px;
     font-size: 20px;
     font-weight: bold;
     color: black;
@@ -186,6 +222,7 @@ a {
     text-align: center;
     text-shadow: none;
     margin-right: 40px;
+    z-index: 3;
 }
 
 .book:hover {
@@ -211,7 +248,7 @@ a {
     .side {
         width: 40vw;
         margin: auto 2vw;
-        line-height: 35px;
+        line-height: 30px;
         font-size: 1vw;
     }
 
@@ -255,27 +292,35 @@ a {
     .left {
         width: 45vw;
         border-right: 2px solid white;
-        h1{
+        z-index: 2;
+
+        h1 {
             font-size: 27px
         }
-        h5{
+
+        h5 {
             margin: 5px;
             color: gray;
         }
-        img{
+
+        img {
             width: 30px;
             border-radius: 50%;
             margin: 20px 10px;
         }
-        a{
+
+        a {
             transition: all 0.3s;
         }
-        a:hover{
+
+        a:hover {
             scale: 1.1;
         }
-        .cntr{
+
+        .cntr {
             justify-content: space-evenly;
-            .cntr{
+
+            .cntr {
                 justify-content: center;
             }
         }
@@ -284,19 +329,21 @@ a {
     .right {
         width: 45vw;
 
-        a{
+        a {
             width: 12%;
             margin: 10px;
             transition: all 0.2s;
+
             img {
                 width: 100%;
                 border-radius: 15px;
             }
         }
-        a:hover{
+
+        a:hover {
             scale: 1.1;
         }
-        
+
     }
 }
 
@@ -314,6 +361,7 @@ a {
     height: 0;
     width: 80%;
     margin: 5% 10%;
+    z-index: 3;
 }
 
 .responsive-map iframe {
@@ -323,128 +371,143 @@ a {
     width: 100%;
     position: absolute;
 }
-.footer{
+
+.footer {
     background-color: black;
-    img{
+    position: absolute;
+    bottom: 0px;
+
+    img {
         width: 100%;
     }
 }
 
-.mob-l-2{
+.mob-l-2 {
     position: relative;
+
     .text {
         /* position: absolute; */
-        width: 600px;
+        /* width: 600px; */
         /* left: 20px; */
         /* margin-left: ; */
         height: 40px;
         /* top: 0%; */
         /* margin-top: 0px; */
-      }
-      
-      p {
+    }
+
+    p {
         display: inline-block;
         vertical-align: top;
         margin: 0;
-      }
-      
-      .word {
+    }
+
+    .word {
         position: absolute;
         opacity: 0;
-      }
-      
-      .letter {
+    }
+
+    .letter {
         display: inline-block;
         position: relative;
         /* float: left; */
         transform: translateZ(25px);
         transform-origin: 50% 50% 25px;
-      }
-      
-      .letter.out {
+    }
+
+    .letter.out {
         transform: rotateX(90deg);
         transition: transform 0.32s cubic-bezier(0.55, 0.055, 0.675, 0.19);
-      }
-      
-      .letter.behind {
+    }
+
+    .letter.behind {
         transform: rotateX(-90deg);
-      }
-      
-      .letter.in {
+    }
+
+    .letter.in {
         transform: rotateX(0deg);
         transition: transform 0.38s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      }
-      
-      .wisteria {
+    }
+
+    .wisteria {
         color: #b359d9;
-      }
-      
-      .belize {
+    }
+
+    .belize {
         color: #4597cd;
-      }
-      
-      .pomegranate {
+    }
+
+    .pomegranate {
         color: #ce4b3c;
-      }
-      
-      .green {
+    }
+
+    .green {
         color: #16a085;
-      }
-      
-      .midnight {
+    }
+
+    .midnight {
         color: #2c3e50;
-      }
-      
+    }
+
 }
 
+
 @media only screen and (max-width: 720px) {
-    .loading{
-        h1{
+    .loading {
+        h1 {
             margin: -5px 0;
             font-size: 60px;
         }
-        h5{
+        img{
+            width: 70vw;
+        }
+
+        h5 {
             margin: 12px 0;
-            font-size: 25px;
-            span{
+            font-size: 22px;
+
+            /* span {
                 font-size: 24px;
-            }
-            
+            } */
+
         }
     }
-    .header{
+
+    .header {
         height: 90vh;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
         padding: 110px 0 0px;
+
         h1 {
-            font-size: 1.8rem;
-            margin: 5px 10px;
+            font-size: 7vw;
+            margin: 5px 10px 0;
         }
-    
+
         h2 {
             font-size: 1.6rem;
             margin: 5px;
         }
-    
+
         h3 {
             font-size: 0.7rem;
             text-align: center;
             padding: 0px 30px;
         }
-        
-        .cntr2{
+
+        .cntr2 {
             display: flex;
             justify-content: center;
         }
-        .mob-l-2{
+
+        .mob-l-2 {
             margin-left: 15px;
         }
-    
-        .avalabilities{
+
+        .avalabilities {
             text-align: center;
-            h3{
+
+            h3 {
                 padding: 10px;
                 font-size: 0.8rem;
                 border-radius: 0px;
@@ -454,17 +517,21 @@ a {
             }
         }
     }
+
     .book {
         width: 100px;
         font-size: 15px;
         margin: 20px;
     }
-    header{
-        h1{
-            margin: -5px 0;
-            font-size: larger;
+
+    header {
+        img {
+            width: 230px;
+            filter: drop-shadow(2px 2px 10px black);
+            margin: 80px 0 0 00px;
         }
-        a{
+
+        a {
             color: white;
             margin-left: 10px;
             font-size: 12px;
@@ -473,21 +540,30 @@ a {
             border-radius: 20px;
             transition: all 0.2s;
         }
-        h5{
-            margin: 9px 0;
+
+        div:nth-child(2) {
+            margin-top: 8px;
+        }
+
+        h5 {
+            margin: -4px 0;
             font-size: 8px;
-            span{
+            text-shadow: 2px 2px 10px black;
+
+            span {
                 color: red;
                 margin: auto 2px;
             }
-            
+
         }
     }
-    .card1{
-        h1{
+
+    .card1 {
+        h1 {
             font-size: 30px;
             margin: 10px auto 40px;
         }
+
         .side {
             width: 90vw;
             margin: auto 5vw;
@@ -496,77 +572,94 @@ a {
             font-size: 2vw;
             font-weight: normal !important;
         }
-        .cntr{
+
+        .cntr {
             flex-direction: column;
         }
+
         .side2 {
             width: 90vw;
             margin: 20px 5vw;
             display: flex;
             justify-content: space-evenly;
-    
+
             img {
                 height: 30vw;
                 width: auto;
-                border-radius: 20px;
+                border-radius: 10px;
             }
         }
     }
-    .connect{
+
+    .connect {
         flex-direction: column;
         padding: 10px 0px;
+        z-index: 2;
+
         h1 {
             margin: 20px auto;
         }
+
         .left {
             width: 100vw;
             border-right: none;
-            h1{
+
+            h1 {
                 font-size: 22px;
             }
-            h3{
+
+            h3 {
                 font-size: 14px;
             }
-            img{
+
+            img {
                 width: 25px;
             }
+
             .prfle {
                 width: 90px !important;
                 border-radius: 50%;
                 margin: 10px auto;
             }
-            h5{
+
+            h5 {
                 font-size: 10px;
             }
-            
+
         }
+
         .right {
             width: 100vw;
             border-right: 2px solid white;
+
             h1 {
                 margin: 50px auto 30px;
             }
         }
-        .cntr{
+
+        .cntr {
             flex-direction: row;
         }
     }
+
     .galary {
         display: flex;
         justify-content: space-evenly;
         padding-bottom: 50px;
         flex-wrap: wrap;
-    
+
         img {
             width: 40%;
-            border-radius: 20px;
+            border-radius: 10px;
             margin-bottom: 30px;
         }
     }
-    .mob-l-2{
+
+    .mob-l-2 {
         position: relative;
+
         .text {
             width: 200px;
-          }
         }
+    }
 }
