--- a/app/static/css/booking.css
+++ b/app/static/css/booking.css
@@ -1,7 +1,8 @@
 body {
-    background-color: black;
+    /* background-color: black; */
     color: white;
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
 header {
