--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -4,6 +4,44 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     color: white;
 }
+header {
+    background-color: rgba(0, 0, 0, 0.438);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    z-index: 4;
+
+    img {
+        width: 180px;
+        margin: 0 0 0 0;
+        filter: drop-shadow(2px 2px 10px black);
+        transition: all 0.5s;
+    }
+    div:nth-child(2){
+        margin-top: 13px;
+    }
+
+    a {
+        color: white;
+        margin-left: 20px;
+        font-size: 16px;
+        background-color: purple;
+        padding: 6px 20px;
+        border-radius: 20px;
+        transition: all 0.2s;
+    }
+
+    a:hover {
+        background-color: white;
+        color: purple;
+    }
+}
 h1{
     text-align: center;
 }
@@ -45,5 +83,30 @@ h1{
     }
     button:hover{
         transform: scale(0.9);
+    }
+}
+a{
+    text-decoration: none;
+}
+
+@media only screen and (max-width: 720px){
+    header {
+        img {
+            width: 140px;
+        }
+    
+        a {
+            color: white;
+            margin-left: 10px;
+            font-size: 12px;
+            background-color: purple;
+            padding: 5px 15px;
+            border-radius: 20px;
+            transition: all 0.2s;
+        }
+    
+        div:nth-child(2) {
+            margin-top: 8px;
+        }
     }
 }
