--- a/app/templates/booking_others.html
+++ b/app/templates/booking_others.html
@@ -7,6 +7,7 @@
     <title>Sai Music - Booking</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/bookingOthers.css' %}">
+    <link rel="stylesheet" href="{% static 'css/particle.css' %}">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
             <a href="{% url 'booking_date' %}" style="background-color: red;">Select Date</a>
         </div>
     </header>
+    <div id="particles-js"></div>
     <!-- <section class="card1">
         <div class="logo">
 
@@ -198,6 +200,8 @@
 			});
 		});
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/particle.js' %}"></script>
 </body>
 
 </html>
