--- a/app/templates/check_status.html
+++ b/app/templates/check_status.html
@@ -6,12 +6,21 @@
     <title>Sai Music - Check Status</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    <link rel="stylesheet" href="{% static 'css/particle.css' %}">
     <style>
        
     </style>
 </head>
 <body>
-    
+    <header id="header">
+        <div>
+            <img id="himage" src="{% static 'images/sai music logo.png' %}" alt="">
+        </div>
+        <div>
+            <a href="{% url 'booking' %}" style="background-color: rgb(22, 40, 130);">Book Now</a>
+        </div>
+    </header>
+    <div id="particles-js"></div>
     <div class="row">
         <div class="box">
             <h1>Check Your Booking Status</h1>
@@ -25,5 +34,7 @@
             </form>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/particle.js' %}"></script>
 </body>
 </html>
