--- a/app/templates/booking.html
+++ b/app/templates/booking.html
@@ -33,13 +33,13 @@
             <a href="{% url 'booking_date' %}" class="cat-oth">
                 Lights
             </a>
-            <a href="" class="cat-oth">
+            <a href="{% url 'comming_soon' %}" class="cat-oth">
                 Sound Systems
             </a>
-            <a href="" class="cat-oth">
+            <a href="{% url 'comming_soon' %}" class="cat-oth">
                 Decorations
             </a>
-            <a href="" class="cat-oth">
+            <a href="{% url 'comming_soon' %}" class="cat-oth">
                 Catering
             </a>
         </div>
