--- a/app/static/css/bookingOthers.css
+++ b/app/static/css/bookingOthers.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Comfortaa", sans-serif !important;
 }
 header {
     background-color: rgba(0, 0, 0, 0.438);
@@ -96,11 +98,6 @@ a{
     padding: 15px;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.718);
-    /* body {
-        font-family: 'Roboto', sans-serif;
-        background-color: #f8f7fa;
-        color: #333;
-    } */
 
     .calendar {
         position: absolute;
