--- a/app/static/css/home.css
+++ b/app/static/css/home.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body {
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     position: relative;
+    font-family: "Comfortaa", sans-serif !important;
 }
 
 html {
@@ -182,8 +184,9 @@ a {
     h1 {
         color: rgb(255, 196, 0);
         font-size: 50px;
-        /* font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; */
+        font-weight: bolder;
         margin: 0px 20px;
+        font-family: Arial, Helvetica, sans-serif;
     }
 
     h2 {
