--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
+
 body{
     background-color: black;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Comfortaa", sans-serif !important;
     color: white;
 }
 header {
