--- a/app/templates/booking_dj.html
+++ b/app/templates/booking_dj.html
@@ -7,6 +7,7 @@
     <title>Sai Music - Dj</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/booking.css' %}">
+    <link rel="stylesheet" href="{% static 'css/particle.css' %}">
 </head>
 
 <body>
@@ -19,6 +20,7 @@
             <a href="{% url 'check_status' %}" style="background-color: rgb(136, 88, 0);">Change Date</a>
         </div>
     </header>
+    <div id="particles-js"></div>
     <br><br>
     <h1>DJ</h1>
     <div class="cntr">
@@ -116,6 +118,8 @@
         selectedDate.setDate(28); // Set the date to 21
         generateDates(selectedDate);
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js" type="text/javascript"></script>
+    <script src="{% static 'js/particle.js' %}"></script>
 </body>
 
 </html>
